--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,3 +37,9 @@
     transform: rotate(360deg);
   }
 }
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
+
+.title {
+  font-family: 'Julius Sans One', sans-serif;
+
+}
