--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  background-image: url("./holo.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
